add unique ids for inputs, disabled place order if no credit cards are present in checkout

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ button {
   cursor: pointer;
 }
 
+button.disabled {
+  opacity: .5;
+  cursor: initial;
+  pointer-events: none;
+}
+
 .confirmation-message {
     height: 100%;
     display: flex;
