--- a/src/card-form/styles.css
+++ b/src/card-form/styles.css
@@ -40,7 +40,7 @@
 .credit-card-input__security-code__info {
     display: flex;
     align-items: center;
-    margin-left: 16px;
+    margin: 6px 0px 0px 16px;
     font-size: 12px;
 }
 
